--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.github.mrengineer13:snackbar:1.1.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile files('libs/mpandroidchartlibrary-2-1-0.jar')
+    compile 'com.android.support:support-v4:22.2.1'
 }
 
 
