--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,8 @@ buildscript {
 }
 
 allprojects {
-//    repositories {
-//        jcenter()
-//    }
     repositories {
+        jcenter()
         maven {
             url "http://repo1.maven.org/maven2/"
 
