--- a/mymoney/src/main/AndroidManifest.xml
+++ b/mymoney/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity_"
-            android:windowSoftInputMode="stateVisible|adjustResize"
+            android:name=".ui.activity.MainActivity_"
+            android:launchMode="singleTask"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
