--- a/mymoney/build.gradle
+++ b/mymoney/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'de.greenrobot:greendao:2.1.0'
+    compile 'de.greenrobot:eventbus:3.0.0-beta1'
 }
 
 apt {
