--- a/mymoney/src/main/AndroidManifest.xml
+++ b/mymoney/src/main/AndroidManifest.xml
@@ -9,13 +9,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.activity.MainActivity_"
+            android:name=".ui.activity.MainActivity"
             android:launchMode="singleTask"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:screenOrientation="portrait"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
