--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.+'
-    compile 'me.drakeet.materialdialog:library:1.2.3'
+    compile 'me.drakeet.materialdialog:library:1.2.+'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.support:recyclerview-v7:23.+'
     compile 'com.android.support:cardview-v7:23.+'
