--- a/mymoney/build.gradle
+++ b/mymoney/build.gradle
@@ -26,13 +26,13 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.android.support:recyclerview-v7:23.+'
-    compile 'com.android.support:cardview-v7:23.+'
-    compile 'com.android.support:design:23.+'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
     compile 'de.greenrobot:greendao:2.1.0'
     compile 'de.greenrobot:eventbus:3.0.0-beta1'
-    compile 'com.jakewharton:butterknife:7.+'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'junit:junit:4.12'
 }
 
